the final bug squashes and performance improvements

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 html {
   scroll-behavior: smooth;
 }
-.image3 {
+.text {
   text-align: center;
 }
 .credits {
